Refactoring and clean up Improved Resource Handling in Constructor The handleCollisions method was updated to skip already destroyed actors he destroyedActors list is now created using the .toList() method instead of .collect(Collectors.toList()), simplifying the code reorganization and alignment of comments for better readability